# qc_fine_tuning

./: CLAUDE.md  README.md  distill.py  distillation_demo.py  dpo.py  dpo_loss_detailed_explanation.md  dpo_manual.py  fine_tune_phi.py  fine_tune_qwen.py  ppo.py  ppo_loss_detailed_explanation.md  ppo_manual.py  pyproject.toml  qwen2.5_ft.py  qwen2.5_usage.py  rlvr_manual.py  test_mps.py  use_phi_lora.py  use_phi_m2air.py  use_qwen2.5_lora.py
data/: qwen_training_data.json  training_data.json
docs/: distillation_details.md  dpo_explanation.md  dpo_vs_ppo_comparison.md  finetuned_model_usage.md  fix_mps.md  lora_and_low_rank_explanation.md  low_rank_and_matrix_takes.md  ppo_dpo_manual_implementation.md  ppo_loss_for_beginners.md  ppo_rlhf_explanation.md  rlvr_manual_explanation.md
docs/完整指南/: QWEN2_5_FINE_TUNE_GUIDE.md  dpo_complete_guide.md  ppo_complete_guide.md  training_data_format.md
docs/手动实现/: ppo_rlhf_with_real_rm.py  rlvr_manual_implementation_plan.md
docs/概念理解/: dpo_loss_for_beginners.md  sft_trainer_advantages.md  激活函数.md
docs/问题排查/: QWEN2_5_FINE_TUNE_TROUBLESHOOTING.md
phi_checkpoint/: README.md  adapter_model.safetensors  all_results.json  eval_results.json  train_results.json
phi_checkpoint/checkpoint-1/: README.md  rng_state.pth  scheduler.pt  trainer_state.json
phi_checkpoint/checkpoint-2/: adapter_model.safetensors  rng_state.pth  scheduler.pt  trainer_state.json
phi_checkpoint/checkpoint-3/: adapter_config.json  adapter_model.safetensors  (+3 more)
qc_train_phi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
qwen_fixed_finetuned/: README.md
(+7 files in other folders)
